[package]
name = "ledger-storage"
description = "Storage engine for InferaDB Ledger using redb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Internal
ledger-types.workspace = true

# Storage
redb.workspace = true

# Crypto (for bucket hashing)
sha2.workspace = true
seahash.workspace = true

# Compression
zstd.workspace = true

# Concurrency
dashmap.workspace = true
parking_lot.workspace = true

# Caching
lru.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true
postcard.workspace = true

# Error handling
snafu.workspace = true

# Utilities
bytes.workspace = true
chrono.workspace = true
tracing.workspace = true

# Async (for snapshot operations)
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
rand.workspace = true

[lints]
workspace = true
