[package]
name = "ledger-storage"
description = "Storage engine for InferaDB Ledger using inkwell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Internal
ledger-types.workspace = true

# Storage (using inkwell B+ tree engine)
inkwell.workspace = true

# Crypto (for bucket hashing)
sha2.workspace = true
seahash.workspace = true

# Compression
zstd.workspace = true

# Concurrency
dashmap.workspace = true
parking_lot.workspace = true

# Caching
lru.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
postcard.workspace = true

# Error handling
snafu.workspace = true

# Utilities
bytes.workspace = true
chrono.workspace = true
tracing.workspace = true

# Async (for snapshot operations)
tokio.workspace = true

# Temporary files (for snapshot serialization to object storage)
tempfile.workspace = true

# Object storage (S3, GCS, Azure, local)
object_store.workspace = true
async-trait.workspace = true
url = "2.5"
futures.workspace = true

[dev-dependencies]
proptest.workspace = true
rand.workspace = true

[lints]
workspace = true
