[package]
name = "inferadb-ledger-store"
description = "Embedded B+ tree database engine for InferaDB Ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
documentation = "https://docs.rs/inferadb-ledger-store"
readme = "README.md"
keywords = ["database", "btree", "embedded", "storage", "ledger"]
categories = ["database-implementations", "data-structures"]

[dependencies]
# Builder pattern
bon = { workspace = true }
# Hashing for checksums
xxhash-rust = { workspace = true }

# Error handling
snafu = { workspace = true }

# Serialization for key/value encoding
byteorder = { workspace = true }

# Parking lot for faster locks
parking_lot = { workspace = true }

# Lock-free atomic pointer swap for COW
arc-swap = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
inferadb-ledger-test-utils.workspace = true

[features]
default = []
# Enable additional safety checks (slower but catches bugs)
paranoid = []
