[package]
name = "inferadb-ledger-test-utils"
description = "Shared test utilities for InferaDB Ledger crates"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Builder pattern
bon.workspace = true

# File system
tempfile.workspace = true

# Async runtime (for assert_eventually)
tokio = { workspace = true, features = ["time", "sync"] }

# Time utilities
chrono.workspace = true

# Configuration types (for test config helpers)
inferadb-ledger-types = { workspace = true }

# Property-based testing strategies
proptest = { workspace = true }

[dev-dependencies]
# For testing the test utilities themselves
tokio = { workspace = true, features = ["full", "test-util"] }
postcard.workspace = true

[lints]
workspace = true
