[package]
name = "inferadb-ledger-types"
description = "Core types, errors, and cryptographic primitives for InferaDB Ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
documentation = "https://docs.rs/inferadb-ledger-types"
readme = "README.md"
keywords = ["ledger", "blockchain", "cryptography", "merkle", "authorization"]
categories = ["cryptography", "data-structures"]

[dependencies]
# Crypto
sha2.workspace = true
seahash.workspace = true
rs_merkle.workspace = true
subtle.workspace = true
zeroize.workspace = true

# Serialization
serde.workspace = true
postcard.workspace = true

# Error handling
snafu.workspace = true

# Utilities
bytes.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
humantime.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
