[package]
name = "inferadb-ledger-types"
description = "Core types, errors, and cryptographic primitives for InferaDB Ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
documentation = "https://docs.rs/inferadb-ledger-types"
readme = "README.md"
keywords = ["ledger", "blockchain", "cryptography", "merkle", "authorization"]
categories = ["cryptography", "data-structures"]

[dependencies]
# Builder pattern
bon.workspace = true

# Crypto
sha2.workspace = true
seahash.workspace = true
rs_merkle.workspace = true
subtle.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
schemars.workspace = true

# Error handling
snafu.workspace = true

# Concurrency
parking_lot.workspace = true

# Randomness (Snowflake worker ID)
rand.workspace = true

# Utilities
chrono.workspace = true
humantime.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true

[lints]
workspace = true
