[package]
name = "inferadb-ledger-types"
description = "Core types, errors, and cryptographic primitives for InferaDB Ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
documentation = "https://docs.rs/inferadb-ledger-types"
readme = "README.md"
keywords = ["ledger", "blockchain", "cryptography", "merkle", "authorization"]
categories = ["cryptography", "data-structures"]

[dependencies]
# Builder pattern
bon.workspace = true

# Crypto
sha2.workspace = true
seahash.workspace = true
rs_merkle.workspace = true
subtle.workspace = true
hmac.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
schemars.workspace = true
base64.workspace = true

# Error handling
snafu.workspace = true

# Parallelism
rayon.workspace = true

# Concurrency
parking_lot.workspace = true

# Randomness (Snowflake worker ID)
rand.workspace = true

# Security
zeroize.workspace = true

# Utilities
chrono.workspace = true
humantime-serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
criterion = { version = "0.5", default-features = false, features = ["html_reports", "cargo_bench_support"] }

[lints]
workspace = true

[[bench]]
name = "merkle"
harness = false
